home_page Screen 연습

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -1,4 +1,6 @@
 {
+  "languageChoiceScreen": "Language Choice Screen",
+  "SampleWidgetScreen" : "Sample Widget Screen",
   "hello": "hello",
   "name": "name",
   "clear": "clear",
