블루투스 스캔 기능 추가

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -1,6 +1,7 @@
 {
   "languageChoiceScreen": "Language Choice Screen",
   "BleScanScreen" : "Ble Scan Screen",
+  "bleScan": "Ble Scan",
   "hello": "hello",
   "name": "name",
   "clear": "clear",
